@@ -234,7 +234,7 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.10.0"
 
     // Firebase Crashlytics
-    implementation platform('com.google.firebase:firebase-bom:33.7.0')
+    implementation platform('com.google.firebase:firebase-bom:33.10.0')
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
